# vital-graph

./: .dockerignore  .env.example  .env.sparql-sql  .gitignore  Dockerfile  MANIFEST.in  PACKAGING.md  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.py
agent_registry/: migrate_agents.py
apps/: generate_jwt_secret.py  migrate_term_index_to_hash.py
archive_vitalgraph_old/: optimized_graph.py  store.py
docs/: OVERVIEW.md  sparql_property_paths_implementation_plan.md  sparql_update_implementation_plan.md
domain_schema/: haley-0.1.0-instances.jsonl  haley-ai-kg-0.1.0-instances.jsonl  haley-ai-kg-0.1.0-schema.json  haley-ai-ml-0.1.0-instances.jsonl  haley-ai-question-0.1.0-instances.jsonl  vital-0.2.304-instances.jsonl  vital-aimp-0.1.0-instances.jsonl
e2e/: .gitignore  global-setup.ts  package-lock.json  package.json  playwright.config.ts  run-tests.sh  seed-constants.ts  tsconfig.json
entity_registry/: IMPORT_FORMAT.md  check_weaviate_missing.py  dedup_sync.py  entity_admin.py  entity_export_jsonl.py  generate_vectors.py  migrate.py  sample_categories.jsonl  sample_entities.jsonl  sample_location_types.jsonl  sample_relationship_types.jsonl  weaviate_admin.py  weaviate_sync.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
issues/: 001_emit_update_lang_uuid_mismatch.md  002_drop_space_residual_tables.md  003_concurrent_insert_term_race.md  004_delete_kgentity_combined_property_coercion.md  004_fuzzy_populate_sync_blocking.md  005_entity_search_type_key_wrong_table_alias.md  006_user_model_missing_password_field.md  007_users_endpoint_bugs.md  008_vector_upsert_drops_subject_uri.md  009_kgframes_with_slots_query_ignores_frame_uri.md  010_delete_frame_slots_uses_rdf_type.md  011_invalid_sparql_union_bind_silent_failure.md  012_list_spaces_ignores_space_name.md  013_kgtype_description_lookup_wrong_columns.md  014_segmentation_endpoint_sync_fallback_hang.md  015_vector_similarity_unresolved_subject_variable.md  016_document_search_text_headline_only.md  017_files_use_streaming_endpoints_only.md  018_kgdocuments_missing_create_ui.md  019_triples_list_count_divergence_under_load.md  020_entity_registry_cli_missing_create_init.md
load_test_scripts/: .gitignore  README.md  load_test.py  load_test_config.py  load_test_data.py  setup.py
log_analysis/: tail_live.sh
planning/: kg_classes_properties.json  kg_classes_properties.md  kg_endpoints_update.md  kg_jsonld_update.md  kg_planning.md  kg_query_endpoint_plan.md  kg_slot_value_properties_summary.md  kg_update_plan.md  space_backend_inf_plan.md
planning_fuseki/: auto_graph_registration_plan.md  business_events_integration_example.md  fuseki_jsonld_plan.md  fuseki_psql_client_testing_plan.md  fuseki_psql_client_update_plan.md  fuseki_psql_data_model.md  fuseki_psql_pending_updates_plan.md  fuseki_service_plan_1_9_2026.md  graphs_client_api_cleanup_plan.md  jwt_token_auto_refresh_plan.md  kgentities_hierarchical_frames_minimal_fix.md  kgquery_client_test_script_plan.md  kgrelations_implementation_plan.md  kgslot_to_kgentity_migration_plan.md  postgresql_fuseki_transaction_investigation_plan.md
scripts/: backfill_entity_server_properties.py  delete_kggraph_uri_subjects.py  migrate_entity_registry_vectors.py  migrate_fuzzy_redis_to_pg.py  query_entity_graph_leftovers.py  query_kggraph_uri_subjects.py  run-perf-tests.sh
sql_scripts/: create_covering_index.sql  create_edge_indexes.sql  create_optimized_edge_materialized_view.sql  find_unused_terms.sql  happy_frame_query_1.sql  happy_frame_query_10_corrected.sql  happy_frame_query_11_fixed.sql  happy_frame_query_15_optimized.sql  happy_frame_query_4.sql  happy_frame_query_5.sql  happy_frame_query_7_corrected.sql  happy_frame_query_8_final.sql  happy_frame_query_9_with_mv.sql
test_client_api/: README.md  test_grouping_uri_functionality.py
test_scripts/: inspect_dataset.py  query_entity_graph_leftovers.py  rdf_sql_init.py  rdf_sql_query.py  test_annotation_integration.py  test_entity_graph_cache_invalidation.py  test_fuzzy_client_integration.py  test_fuzzy_cluster.py  test_fuzzy_core_unit.py  test_fuzzy_match_unit.py  test_fuzzy_sparql_e2e.py  test_fuzzy_thread_offload.py  test_geo_bounds_polygon.py  test_geo_client_integration.py  test_geo_points_endpoint.py  test_geo_semantic_quality.py  test_geo_sparql_all.py  test_geo_vector_combined_sparql.py  test_local_vectorizer.py  test_maintenance_job_stalls.py  test_quad_format_roundtrip.py  test_vector_geo_e2e.py  vital_graph_test.py  vital_pg_schema_test.py  vital_schema_test.py
test_sparql/: __init__.py  test_triple_store.py
tests/: conftest.py
vitalgraph/: constants.py
vitalgraph-client-ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
vitalgraph-jena-sidecar/: Dockerfile  docker-compose.yml  pom.xml  smoke_test.py
vitalgraph_client_test/: client_test_data.py  create_test_space_with_data.py  delete_test_space.py  load_test_data.py  test_admin_resync.py  test_clean_spaces.py  test_crud_stress.py  test_data_manifest.json  test_datatype_preservation.py  test_duplicate_uri_writes.py  test_entity_graph_debug.py  test_entity_registry_endpoint.py  test_entity_registry_queries.py  test_falsey_values_trace.py  test_files_endpoint.py  test_find_similar_readonly.py  test_frame_query_wordnet.py  test_frame_structure.py  test_jwt_auth.py  (+35 more)
(+2208 files in other folders)
